src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock
  36       | GuardedIfStmt
  37       | GuardedDoStmt

  38  GuardedIfStmt : IF GuardedStmts FI

  39  GuardedDoStmt : DO GuardedStmts OD

  40  GuardedStmts : GuardedStmts GUARD GuardedStmt
  41               | GuardedStmt

  42  GuardedStmt : Expr ':' Stmt

  43  SimpleStmt : LValue '=' Expr
  44             | Call
  45             |

  46  Receiver : Expr '.'
  47           |

  48  LValue : Receiver IDENTIFIER
  49         | Expr '[' Expr ']'

  50  Call : Receiver IDENTIFIER '(' Actuals ')'

  51  Expr : LValue
  52       | Call
  53       | Constant
  54       | Expr '+' Expr
  55       | Expr '-' Expr
  56       | Expr '*' Expr
  57       | Expr '/' Expr
  58       | Expr '%' Expr
  59       | Expr EQUAL Expr
  60       | Expr NOT_EQUAL Expr
  61       | Expr '<' Expr
  62       | Expr '>' Expr
  63       | Expr LESS_EQUAL Expr
  64       | Expr GREATER_EQUAL Expr
  65       | Expr AND Expr
  66       | Expr OR Expr
  67       | '(' Expr ')'
  68       | Expr PLUS_PLUS
  69       | PLUS_PLUS Expr
  70       | Expr MINUS_MINUS
  71       | MINUS_MINUS Expr
  72       | NUMINSTANCES '(' IDENTIFIER ')'
  73       | '-' Expr
  74       | '!' Expr
  75       | Expr '?' Expr ':' Expr
  76       | READ_INTEGER '(' ')'
  77       | READ_LINE '(' ')'
  78       | THIS
  79       | NEW IDENTIFIER '(' ')'
  80       | NEW Type '[' Expr ']'
  81       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  82       | '(' CLASS IDENTIFIER ')' Expr

  83  Constant : LITERAL
  84           | NULL

  85  Actuals : ExprList
  86          |

  87  ExprList : ExprList ',' Expr
  88           | Expr

  89  WhileStmt : WHILE '(' Expr ')' Stmt

  90  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  91  BreakStmt : BREAK

  92  IfStmt : IF '(' Expr ')' Stmt ElseClause

  93  ElseClause : ELSE Stmt
  94             |

  95  ReturnStmt : RETURN Expr
  96             | RETURN

  97  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (45)
	Receiver : .  (47)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'{'  shift 41
	'}'  shift 65
	DO  shift 66
	IDENTIFIER  reduce 47
	';'  reduce 45

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	ForStmt  goto 73
	ReturnStmt  goto 74
	PrintStmt  goto 75
	BreakStmt  goto 76
	GuardedIfStmt  goto 77
	GuardedDoStmt  goto 78
	Expr  goto 79
	LValue  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (84)

	.  reduce 84


state 47
	Expr : THIS .  (78)

	.  reduce 78


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (89)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (90)

	'('  shift 85
	.  error


state 50
	GuardedIfStmt : IF . GuardedStmts FI  (38)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (92)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 86
	IDENTIFIER  reduce 47

	GuardedStmts  goto 87
	GuardedStmt  goto 88
	Expr  goto 89
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 51
	ReturnStmt : RETURN . Expr  (95)
	ReturnStmt : RETURN .  (96)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47
	';'  reduce 96

	Expr  goto 92
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 52
	BreakStmt : BREAK .  (91)

	.  reduce 91


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (79)
	Expr : NEW . Type '[' Expr ']'  (80)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 93
	.  error

	Type  goto 94


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (97)

	'('  shift 95
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (76)

	'('  shift 96
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (77)

	'('  shift 97
	.  error


state 57
	Constant : LITERAL .  (83)

	.  reduce 83


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (81)

	'('  shift 98
	.  error


state 59
	Expr : PLUS_PLUS . Expr  (69)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 99
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 60
	Expr : MINUS_MINUS . Expr  (71)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 100
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 61
	Expr : NUMINSTANCES . '(' IDENTIFIER ')'  (72)

	'('  shift 101
	.  error


state 62
	Expr : '-' . Expr  (73)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 102
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 63
	Expr : '!' . Expr  (74)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 103
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 64
	Expr : '(' . Expr ')'  (67)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (82)
	Receiver : .  (47)

	CLASS  shift 104
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 105
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 65
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 66
	GuardedDoStmt : DO . GuardedStmts OD  (39)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	GuardedStmts  goto 106
	GuardedStmt  goto 88
	Expr  goto 89
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 67
	Stmt : VariableDef .  (27)

	.  reduce 27


state 68
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 69
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 70
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 107
	.  error


state 71
	Stmt : IfStmt .  (29)

	.  reduce 29


state 72
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 73
	Stmt : ForStmt .  (31)

	.  reduce 31


state 74
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 108
	.  error


state 75
	Stmt : PrintStmt . ';'  (33)

	';'  shift 109
	.  error


state 76
	Stmt : BreakStmt . ';'  (34)

	';'  shift 110
	.  error


state 77
	Stmt : GuardedIfStmt .  (36)

	.  reduce 36


state 78
	Stmt : GuardedDoStmt .  (37)

	.  reduce 37


state 79
	Receiver : Expr . '.'  (46)
	LValue : Expr . '[' Expr ']'  (49)
	Expr : Expr . '+' Expr  (54)
	Expr : Expr . '-' Expr  (55)
	Expr : Expr . '*' Expr  (56)
	Expr : Expr . '/' Expr  (57)
	Expr : Expr . '%' Expr  (58)
	Expr : Expr . EQUAL Expr  (59)
	Expr : Expr . NOT_EQUAL Expr  (60)
	Expr : Expr . '<' Expr  (61)
	Expr : Expr . '>' Expr  (62)
	Expr : Expr . LESS_EQUAL Expr  (63)
	Expr : Expr . GREATER_EQUAL Expr  (64)
	Expr : Expr . AND Expr  (65)
	Expr : Expr . OR Expr  (66)
	Expr : Expr . PLUS_PLUS  (68)
	Expr : Expr . MINUS_MINUS  (70)
	Expr : Expr . '?' Expr ':' Expr  (75)

	AND  shift 111
	OR  shift 112
	PLUS_PLUS  shift 113
	MINUS_MINUS  shift 114
	LESS_EQUAL  shift 115
	GREATER_EQUAL  shift 116
	EQUAL  shift 117
	NOT_EQUAL  shift 118
	'+'  shift 119
	'-'  shift 120
	'*'  shift 121
	'/'  shift 122
	'%'  shift 123
	'>'  shift 124
	'<'  shift 125
	'.'  shift 126
	'?'  shift 127
	'['  shift 128
	.  error


state 80
	SimpleStmt : LValue . '=' Expr  (43)
	Expr : LValue .  (51)

	'='  shift 129
	AND  reduce 51
	OR  reduce 51
	PLUS_PLUS  reduce 51
	MINUS_MINUS  reduce 51
	LESS_EQUAL  reduce 51
	GREATER_EQUAL  reduce 51
	EQUAL  reduce 51
	NOT_EQUAL  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	'.'  reduce 51
	'?'  reduce 51
	'['  reduce 51


state 81
	SimpleStmt : Call .  (44)
	Expr : Call .  (52)

	AND  reduce 52
	OR  reduce 52
	PLUS_PLUS  reduce 52
	MINUS_MINUS  reduce 52
	LESS_EQUAL  reduce 52
	GREATER_EQUAL  reduce 52
	EQUAL  reduce 52
	NOT_EQUAL  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'%'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'.'  reduce 52
	'?'  reduce 52
	';'  reduce 44
	')'  reduce 44
	'['  reduce 52


state 82
	LValue : Receiver . IDENTIFIER  (48)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (50)

	IDENTIFIER  shift 130
	.  error


state 83
	Expr : Constant .  (53)

	.  reduce 53


state 84
	WhileStmt : WHILE '(' . Expr ')' Stmt  (89)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 131
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 85
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (90)
	SimpleStmt : .  (45)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47
	';'  reduce 45

	SimpleStmt  goto 132
	Expr  goto 79
	LValue  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 86
	Expr : '(' . Expr ')'  (67)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (82)
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (92)
	Receiver : .  (47)

	CLASS  shift 104
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 133
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 87
	GuardedIfStmt : IF GuardedStmts . FI  (38)
	GuardedStmts : GuardedStmts . GUARD GuardedStmt  (40)

	GUARD  shift 134
	FI  shift 135
	.  error


state 88
	GuardedStmts : GuardedStmt .  (41)

	.  reduce 41


state 89
	GuardedStmt : Expr . ':' Stmt  (42)
	Receiver : Expr . '.'  (46)
	LValue : Expr . '[' Expr ']'  (49)
	Expr : Expr . '+' Expr  (54)
	Expr : Expr . '-' Expr  (55)
	Expr : Expr . '*' Expr  (56)
	Expr : Expr . '/' Expr  (57)
	Expr : Expr . '%' Expr  (58)
	Expr : Expr . EQUAL Expr  (59)
	Expr : Expr . NOT_EQUAL Expr  (60)
	Expr : Expr . '<' Expr  (61)
	Expr : Expr . '>' Expr  (62)
	Expr : Expr . LESS_EQUAL Expr  (63)
	Expr : Expr . GREATER_EQUAL Expr  (64)
	Expr : Expr . AND Expr  (65)
	Expr : Expr . OR Expr  (66)
	Expr : Expr . PLUS_PLUS  (68)
	Expr : Expr . MINUS_MINUS  (70)
	Expr : Expr . '?' Expr ':' Expr  (75)

	AND  shift 111
	OR  shift 112
	PLUS_PLUS  shift 113
	MINUS_MINUS  shift 114
	LESS_EQUAL  shift 115
	GREATER_EQUAL  shift 116
	EQUAL  shift 117
	NOT_EQUAL  shift 118
	'+'  shift 119
	'-'  shift 120
	'*'  shift 121
	'/'  shift 122
	'%'  shift 123
	'>'  shift 124
	'<'  shift 125
	'.'  shift 126
	'?'  shift 127
	':'  shift 136
	'['  shift 128
	.  error


state 90
	Expr : LValue .  (51)

	.  reduce 51


state 91
	Expr : Call .  (52)

	.  reduce 52


state 92
	Receiver : Expr . '.'  (46)
	LValue : Expr . '[' Expr ']'  (49)
	Expr : Expr . '+' Expr  (54)
	Expr : Expr . '-' Expr  (55)
	Expr : Expr . '*' Expr  (56)
	Expr : Expr . '/' Expr  (57)
	Expr : Expr . '%' Expr  (58)
	Expr : Expr . EQUAL Expr  (59)
	Expr : Expr . NOT_EQUAL Expr  (60)
	Expr : Expr . '<' Expr  (61)
	Expr : Expr . '>' Expr  (62)
	Expr : Expr . LESS_EQUAL Expr  (63)
	Expr : Expr . GREATER_EQUAL Expr  (64)
	Expr : Expr . AND Expr  (65)
	Expr : Expr . OR Expr  (66)
	Expr : Expr . PLUS_PLUS  (68)
	Expr : Expr . MINUS_MINUS  (70)
	Expr : Expr . '?' Expr ':' Expr  (75)
	ReturnStmt : RETURN Expr .  (95)

	AND  shift 111
	OR  shift 112
	PLUS_PLUS  shift 113
	MINUS_MINUS  shift 114
	LESS_EQUAL  shift 115
	GREATER_EQUAL  shift 116
	EQUAL  shift 117
	NOT_EQUAL  shift 118
	'+'  shift 119
	'-'  shift 120
	'*'  shift 121
	'/'  shift 122
	'%'  shift 123
	'>'  shift 124
	'<'  shift 125
	'.'  shift 126
	'?'  shift 127
	'['  shift 128
	';'  reduce 95


state 93
	Expr : NEW IDENTIFIER . '(' ')'  (79)

	'('  shift 137
	.  error


state 94
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (80)

	'['  shift 138
	.  error


state 95
	PrintStmt : PRINT '(' . ExprList ')'  (97)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 139
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83
	ExprList  goto 140


state 96
	Expr : READ_INTEGER '(' . ')'  (76)

	')'  shift 141
	.  error


state 97
	Expr : READ_LINE '(' . ')'  (77)

	')'  shift 142
	.  error


state 98
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (81)
	Receiver : .  (47)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	PLUS_PLUS  shift 59
	MINUS_MINUS  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 47

	Expr  goto 143
	LValue  goto 90
	Call  goto 91
	Receiver  goto 82
	Constant  goto 83


state 99
	Receiver : Expr . '.'  (46)
	LValue : Expr . '[' Expr ']'  (49)
	Expr : Expr . '+' Expr  (54)
	Expr : Expr . '-' Expr  (55)
	Expr : Expr . '*' Expr  (56)
	Expr : Expr . '/' Expr  (57)
	Expr : Expr . '%' Expr  (58)
	Expr : Expr . EQUAL Expr  (59)
	Expr : Expr . NOT_EQUAL Expr  (60)
	Expr : Expr . '<' Expr  (61)
	Expr : Expr . '>' Expr  (62)
	Expr : Expr . LESS_EQUAL Expr  (63)
	Expr : Expr . GREATER_EQUAL Expr  (64)
	Expr : Expr . AND Expr  (65)
	Expr : Expr . OR Expr  (66)
	Expr : Expr . PLUS_PLUS  (68)
	Expr : PLUS_PLUS Expr .  (69)
	Expr : Expr . MINUS_MINUS  (70)
	Expr : Expr . '?' Expr ':' Expr  (75)

	'.'  shift 126
	'['  shift 128
	AND  reduce 69
	OR  reduce 69
	LESS_EQUAL  reduce 69
	GREATER_EQUAL  reduce 69
	EQUAL  reduce 69
	NOT_EQUAL  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69
	'%'  reduce 69
	'>'  reduce 69
	'<'  reduce 69
	'?'  reduce 69
	':'  reduce 69
	','  reduce 69
	';'  reduce 69
	')'  reduce 69
	']'  reduce 69


state 100
	Receiver : Expr . '.'  (46)
	LValue : Expr . '[' Expr ']'  (49)
	Expr : Expr . '+' Expr  (54)
	Expr : Expr . '-' Expr  (55)
	Expr : Expr . '*' Expr  (56)
	Expr : Expr . '/' Expr  (57)
	Expr : Expr . '%' Expr  (58)
	Expr : Expr . EQUAL Expr  (59)
	Expr : Expr . NOT_EQUAL Expr  (60)
	Expr : Expr . '<' Expr  (61)
	Expr : Expr . '>' Expr  (62)
	Expr : Expr . LESS_EQUAL Expr  (63)
	Expr : Expr . GREATER_EQUAL Expr  (64)
	Expr : Expr . AND Expr  (65)
	Expr : Expr . OR Expr  (66)
	Expr : Expr . PLUS_PLUS  (68)
	Expr : Expr . MINUS_MINUS  (70)
	Expr : MINUS_MINUS Expr .  (71)
	Expr : Expr . '?' Expr ':' Expr  (75)

	'.'  shift 126
	'['  shift 128
	AND  reduce 71
	OR  reduce 71
	LESS_EQUAL  reduce 71
	GREATER_EQUAL  reduce 71
	EQUAL  reduce 71
	NOT_EQUAL  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	'?'  reduce 71
	':'  reduce 71
	','  reduce 71
	';'  reduce 71
	')'  reduce 71
	']'  reduce 71


state 101
	Expr : NUMINSTANCES '(' . IDENTIFIER ')'  (72)

	IDENTIFIER  shift 144
	.  error

